@@ -82,6 +82,8 @@
   <property name="ivy.home" value="${user.home}/.ant" />
   <property name="ivy.lib" value="${build.dir}/lib"/>
   <property name="ivy.test.lib" value="${build.dir}/test/lib"/>
+  <property name="mvn.repo"
+	    value="https://repository.apache.org/content/repositories/snapshots"/>
 
   <!-- Eclipse properties -->
   <property name="build.dir.eclipse" value=".eclipse"/>
@@ -581,7 +583,7 @@
   <!-- End Eclipse targets -->
 
   <target name="mvn-install" depends="jar,pom,source,javadoc-jar"
-	  description="Installs avro core jar to local fs m2 cache">
+	  description="Installs avro to local m2 cache">
     <typedef resource="org/apache/maven/artifact/ant/antlib.xml"
 	     uri="urn:maven-artifact-ant"
 	     classpathref="java.classpath"/>
@@ -593,6 +595,22 @@
            classifier="javadoc" />
       <pom refid="avro"/>
     </mvn:install>
+  </target>
+
+  <target name="mvn-deploy" depends="jar,pom,source,javadoc-jar"
+     description="Deploys Avro to Maven repo.">
+    <typedef resource="org/apache/maven/artifact/ant/antlib.xml"
+	     uri="urn:maven-artifact-ant"
+	     classpathref="java.classpath"/>
+    <mvn:pom file="${dist.dir}/${fullname}.pom" id="avro"/>
+    <mvn:deploy file="${build.dir}/${fullname}.jar">
+      <remoteRepository id="avro.mvn.repo" url="${mvn.repo}"/>
+      <attach file="${build.dir}/${fullname}-sources.jar"
+           classifier="sources" />
+      <attach file="${build.dir}/${fullname}-javadoc.jar"
+           classifier="javadoc" />
+      <pom refid="avro"/>
+    </mvn:deploy>
   </target>
 
 </project>
